# SkillHub

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.claude/: team.yaml
.claude/daily-summaries/: 2026-03-23.md
.claude/skills/: team.md
.github/workflows/: cli-build.yml  docker-build.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/docs/: logging.md
backend/migrations/: 001_init.sql  002_skills.sql  006_cli_versions.sql
backend/src/: config.rs  lib.rs  main.rs  state.rs
backend/src/api/: auth.rs  cli.rs  groups.rs  mod.rs  roles.rs  skills.rs  users.rs
backend/src/cache/: mod.rs  redis.rs
backend/src/middleware/: auth.rs  permission.rs
backend/src/models/: cli_version.rs  department.rs  group.rs  mod.rs  skill.rs  user.rs
backend/src/repos/: cli_version.rs  mod.rs  skill.rs  user.rs
backend/src/services/: auth.rs  mod.rs  permission.rs  skill.rs  user.rs  validator.rs
backend/src/storage/: local.rs  mod.rs
backend/src/utils/: error.rs  jwt.rs  mod.rs  tar_gz.rs
cli/: Cargo.toml  Dockerfile  build.rs
cli/src/: api.rs  config.rs  main.rs
cli/src/commands/: init.rs  list.rs  local.rs  login.rs  logout.rs  mod.rs  pull.rs  remove.rs  search.rs  show.rs  tag.rs  update.rs  version.rs  versions.rs
docker/: download-cli.sh  nginx.conf  start.sh
docker-compose/: .env-local  docker-compose-build.yml  docker-compose-dev.yml  docker-compose.yml  init.sh  install.sh
docs/: 01-需求文档.md  02-设计方案.md  03-技术选型.md  04-开发计划.md
docs/requirements/: CLAUDE.md
web/: Dockerfile  index.html  nginx.conf  package.json
web/src/: App.vue  main.ts
web/src/api/: auth.ts  (+5 more)
(+52 files in other folders)
