[package]
name = "skillhub-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
thiserror = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = "1.0"
sha2 = "0.10"
regex = "1"
# tar.gz 解析
flate2 = "1.0"
tar = "0.4"
# YAML 解析
serde_yaml = "0.9"
# aws-sdk-s3 = "1"  # 暂时禁用，需要 Rust 1.91+
# aws-config = "1"  # 暂时禁用，需要 Rust 1.91+
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tokio-test = "0.4"