[package]
name = "skillhub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "skillhub"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
dirs = "5"
colored = "2"
tabled = "0.15"
indicatif = "0.17"
urlencoding = "2.1"
dialoguer = "0.11"